# SentinelOS

./: .env.example  .gitignore  alembic.ini  pyproject.toml
infra/docker/: docker-compose.yml
infra/postgres/: init.sql  pgadmin-servers.json
infra/redpanda/: console-config.yaml
services/agent_worker/: worker.py
services/agent_worker/messaging/: dispatcher.py
services/agent_worker/providers/: ollama.py
services/agent_worker/tools/: base.py  directory_scanner.py  manager.py
services/control_plane/api/: dependencies.py  main.py
services/control_plane/api/routes/: events.py  missions.py  runs.py
services/control_plane/api/schemas/: mission_schemas.py  run_schemas.py
services/control_plane/messaging/: publisher.py
services/control_plane/services/: event_service.py  mission_service.py  run_service.py
services/dashboard/: app.py
services/event_store/: database.py
services/event_store/migrations/: env.py
services/event_store/migrations/versions/: 519618739c4a_create_missions_table.py  adc96de00c10_init_event_store_schema.py
services/event_store/models/: agent_event.py  agent_run.py  mission.py
services/event_store/repositories/: base.py  event_repository.py  postgres_mission_repository.py  run_repository.py
services/replay_engine/: engine.py
shared/config/: settings.py
shared/contracts/: base_event.py
shared/domain/: envelope.py  errors.py  execution_states.py  identifiers.py  mission.py  mission_repository.py  mission_states.py
shared/events/: event_types.py
shared/logging/: logger.py
